pending secondary pruning implementation

--- a/new_data_files/extract_statistics.ipynb
+++ b/new_data_files/extract_statistics.ipynb
@@ -617,6 +617,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "157"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((df['is_event_cluster'] == True) & (df['segment_distance'] < 5 * 1e6))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "outputs": [
     {
@@ -845,13 +868,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Non-Event Cluster Segment Distance (1 bp)')"
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -872,6 +895,20 @@
     "plt.hist(df['omkar_missed_transition'], bins=50, color='blue', edgecolor='black')\n",
     "plt.title('Non-Event Cluster Segment Distance (1 bp)')\n",
     "# plt.savefig('figures/nonevent_cluster_distance2.png')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [],
+   "source": [
+    "df.to_csv('comparison_statistics.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
