SV caller: seeding done

--- a/new_data_files/extract_statistics.ipynb
+++ b/new_data_files/extract_statistics.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +29,10 @@
     "from Analyses_UTILS import *"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -96,7 +102,10 @@
     "df[df['n_path_diff'] != 0]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -105,7 +114,10 @@
     "## Batch Analyses"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2471,7 +2483,10 @@
     "plt.hist(dummy_distances[dummy_distances > 200000])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2543,7 +2558,10 @@
     "\tprint(\"{}: {}\".format(event_name, percent_within_bad_cluster))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2554,7 +2572,10 @@
     "df.to_csv('comparison_statistics_v3_d500k.csv', index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2807,7 +2828,10 @@
     "plt.savefig('/media/zhaoyang-new/workspace/KarSim/KarComparator/figures_v2/log10_CNV_missed.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2852,7 +2876,10 @@
     "plt.savefig('/media/zhaoyang-new/workspace/KarSim/KarComparator/figures_v2/SV_missed_v3_d500k.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2961,7 +2988,10 @@
     "plt.savefig('figures/log10_unaccounted_distance_50k.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2987,7 +3017,10 @@
     "plt.savefig('figures/log10_unaccounted_distance_50k.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3007,7 +3040,10 @@
     "df[(df['log10_unaccounted_distance'] <= 6) & (df['is_event_cluster'] == True)].shape"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3033,7 +3069,10 @@
     "plt.savefig('figures/total_missed_transition_50k.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3067,7 +3106,10 @@
     "# plt.savefig('figures/nonevent_cluster_distance2.png')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3152,7 +3194,10 @@
     "df.to_csv('comparison_statistics.csv', index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3161,7 +3206,10 @@
     "## Test Event Chromosome"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
