inversion implemented with approximations

--- a/extract_statistics.ipynb
+++ b/extract_statistics.ipynb
@@ -4691,34 +4691,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# df.to_csv('040524_analyses.csv', index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total_dummies:  163\n",
-      "total_leftover_dummies:  26\n",
-      "total_significant_dummies:  131\n",
-      "total_leftover_significant_dummies:  26\n",
-      "n_seg_changed:  3\n",
-      "n_leftover_segchange:  0\n",
-      "n_significant_seg_change 1\n",
-      "n_leftover_significant_seg_change 0\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## check dummies\n",
     "total_dummies = df['n_dummies'].sum()\n",
@@ -4739,7 +4727,10 @@
     "print('n_leftover_significant_seg_change', leftover_signif_seg_changed)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
