manual labeling done for sv edges (small error correction on syntax), v2

--- a/extract_statistics.ipynb
+++ b/extract_statistics.ipynb
@@ -78,7 +78,10 @@
     "(df['n_path_diff'] != 0).sum()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2525,7 +2528,10 @@
     "df['n_preILP_similar_SV'].sum()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -3022,7 +3028,10 @@
     "problematic_df.to_csv('cases_now_have_fewer_paths.csv')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
