fixed an issue of gaps in segment size dict

--- a/extract_statistics.ipynb
+++ b/extract_statistics.ipynb
@@ -116,7 +116,10 @@
     "# df[df['n_path_diff'] != 0].to_csv('042924_analyses.csv')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2618,7 +2621,10 @@
     "# df.to_csv('042924_analyses_b12.csv', index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -2978,7 +2984,10 @@
     "df2 = df2[['file_name', 'cluster', 'origin_chr', 'n_path_diff', 'SV_missed']]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
